# infra-agent

./: .env  .gitignore  README.md  api_service.py  test.html
agent-backend/: main.py  pyproject.toml
agent-backend/agents/monitoring_agent/: agent.py  config.py  tools.py  utility.py
agent-backend/agents/monitoring_agent/a2a/: client.py
agent-backend/agents/utils/: shared_memory_factory.py
agent-backend/agents/vmware_agent/: agent.py  config.py  tools.py  utility.py
agent-backend/agents/vmware_agent/a2a/: server.py
hackathon/: TESTING.md  index.html  package-lock.json  package.json
hackathon/backend/: requirements.txt  server.py
hackathon/src/: AgentCard.jsx  App.jsx  DebugPanel.jsx  OfficeScene.jsx  OfficeWithSingleAgent.jsx  README.md  RobotBody.jsx  RobotSVG.jsx  SpeechBubble.jsx  StatusBar.jsx  agentcard.css  demo.css  index.html  index.jsx  package.json  styles.css
hackathon/src/components/: AgentCard.jsx  BotConversationManager.jsx  BotScene.jsx  CubicleScene.jsx  CubicleZoom.jsx  CuteBot.jsx  DebugPanel.jsx  OfficeCubicleScene.jsx  OfficeIdle.jsx  OfficeScene.jsx  OfficeWithSingleAgent.jsx  RobotBody.jsx  RobotSVG.jsx  SkinSelector.jsx  SpeechBubble.jsx
infra/: alerts.json
