[project]
name = "infra-rangers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk[http-server]>=0.3.24",
    "corn>=8",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langchain-postgres>=0.0.17",
    "langchain-redis>=0.2.5",
    "langgraph>=1.0.10",
    "psycopg>=3.3.3",
    "redis>=7.1.1",
    "uv>=0.10.9",
    "uvicorn>=0.41.0",
]
